change label colour in contact form

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -454,6 +454,9 @@ body.menu-active .bk-nav {
     }
 }
 
+.contactform label {
+    color: @color-swatch3;
+}
 
 .contactform textarea {
     background-color: @color-swatch2;
