change divider colour and menu promoted subsection background colour

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -596,7 +596,7 @@ button.btn,
 
 hr {
     &.line {
-        background-color: @color-swatch3;
+        background-color: @color-swatch7;
         height: 1px;
     }
 }
@@ -909,8 +909,8 @@ hr {
                 padding: 0;
                 margin: 0;
                 .menu-subsection-promoted { /* PROMOTED SUB-SECTION */ 
-                    border: 1px solid lighten(@color-swatch6,20%);
-                    background-color: lighten(@color-swatch6,25%);
+                    border: 1px solid darken(@color-swatch2,3%);
+                    background-color: lighten(@color-swatch2,2%);
                     .border-radius(3px);
                     padding: 0 2em 2em;
                     margin: 2em 0 1em;
