add style for signup form in header and footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -458,6 +458,17 @@ body.menu-active .bk-nav {
    FORMS
    =============================== */
 
+
+.bk-header, .bk-footer {
+    .widget.profile {
+        margin: 0 0 1em;
+        form fieldset input { 
+            background-color: @color-swatch1;
+            border: 1px solid darken(@color-swatch2,2%);
+        }
+    }
+}   
+
 .contactform input, .widget.signupform form fieldset input, .widget.profile form fieldset input {
     background-color: @color-swatch2;
     border: 1px solid darken(@color-swatch2,2%);
