--- a/home.twig
+++ b/home.twig
@@ -32,13 +32,15 @@
 			{{zone('main')|raw}}
 		</div><!--end contain-->
 
-		<footer class="bk-footer wrapper clearfix">
-			<div class="footer-left">
-		    	{{widget('profile', 'footercolumn1socialicons', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
-		    </div>
-		    <div class="footer-right">
-		    	{{widget('profile', 'footercolumn2copyright', { 'profileType':'copyright', 'copyright':'profile'})|raw}}
-		    </div>
+		<footer class="bk-footer">
+			<div class="contain">
+				<div class="footer-left">
+			    	{{widget('profile', 'footercolumn1socialicons', { 'profileType':'socialicons', 'socialicons':'profile'})|raw}}
+			    </div>
+			    <div class="footer-right">
+			    	{{widget('profile', 'footercolumn2copyright', { 'profileType':'copyright', 'copyright':'profile'})|raw}}
+			    </div>
+			</div>
 		</footer>
 
 	</div><!--end main-->
