change margin-bottom in forms

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -461,7 +461,7 @@ body.menu-active .bk-nav {
 
 
 .widget.profile form {
-    margin: 0 0 1em;
+    margin: 0 0 10px;
     fieldset input { 
         background-color: @color-swatch1;
         border: 1px solid darken(@color-swatch2,2%);
@@ -472,10 +472,10 @@ body.menu-active .bk-nav {
 }
 
 
-.contactform input, .widget.signupform form fieldset input {
+.contactform input, .widget.signupform form fieldset input, #main .widget.profile form fieldset input {
     background-color: @color-swatch2;
     border: 1px solid darken(@color-swatch2,2%);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-indent: 0;
     margin-right: 5px;
     @media @tablet {
