--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1272,6 +1272,19 @@ footer.blog-post-metadata time {
     padding: 3em 0 5em;
 }
 
+
+.widget.ecomproduct .ecom-product .ecom-product-images-container {
+    .ecom-product-preview-image-wrap {
+        background-image: none !important;
+        background-repeat: no-repeat;
+        height: auto;
+        img {
+            display: block;
+            max-width: 100%;
+        }
+    }
+}
+
 .widget.ecomproduct .ecom-product .ecom-product-info {
     .ecom-product-variation {
         margin: 10px 0;
