remove style for profile signup form in #main

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -458,8 +458,6 @@ body.menu-active .bk-nav {
    FORMS
    =============================== */
 
-
-
 .widget.profile form {
     margin: 0 0 10px;
     fieldset input { 
@@ -471,8 +469,7 @@ body.menu-active .bk-nav {
     }
 }
 
-
-.contactform input, .widget.signupform form fieldset input, #main .widget.profile form fieldset input {
+.contactform input, .widget.signupform form fieldset input {
     background-color: @color-swatch2;
     border: 1px solid darken(@color-swatch2,2%);
     margin-bottom: 10px;
