--- a/stylesheet.less
+++ b/stylesheet.less
@@ -106,9 +106,9 @@ body {
         vertical-align: top;
         max-width: 60%;
 		a {
-			@media @mobile {
-				font-size: bkscale(@font-swatch10-font-size, 0.8);
-                line-height: bkscale(@font-swatch10-font-size, 0.85);
+			@media only screen and (max-width: 568px) {
+				font-size: bkscale(@font-swatch10-font-size,0.8);
+                line-height: bkscale(@font-swatch10-font-size,0.85);
 			}
 		}
 	}
