--- a/stylesheet.less
+++ b/stylesheet.less
@@ -98,7 +98,7 @@ body {
 		img {
 			vertical-align: top;
 		}
-        @media @mobile {
+        @media only screen and (max-width: 568px) {
             padding-top: 2px;
         }
 	}
