--- a/stylesheet.less
+++ b/stylesheet.less
@@ -82,7 +82,7 @@ body {
 	top: 0;
 	width: 100%;
 	z-index: 9999;
-	@media @mobile {
+	@media only screen and (max-width: 568px) {
 		padding: 7px 0;
 	}
 }
