--- a/stylesheet.less
+++ b/stylesheet.less
@@ -97,6 +97,7 @@ body {
 		vertical-align: text-bottom;
 		img {
 			vertical-align: top;
+            max-height: 40px;
 		}
         @media only screen and (max-width: 568px) {
             padding-top: 2px;
@@ -104,7 +105,13 @@ body {
 	}
 	&.companyname {
         vertical-align: top;
-        max-width: 60%;
+        max-width: 84%;
+        @media only screen and (max-width: 568px) {
+            max-width: 75%;
+        }
+        @media only screen and (max-width: 480px) {
+            max-width: 55%;
+        }
 		a {
 			@media only screen and (max-width: 568px) {
 				font-size: bkscale(@font-swatch10-font-size,0.8);
