--- a/stylesheet.less
+++ b/stylesheet.less
@@ -76,7 +76,7 @@ body {
 .bk-header {
 	background-color: @color-swatch2;
 	border-top: 15px solid @color-swatch7;
-	padding: 30px 0;
+	padding: 20px 0;
 	position: fixed;
 	right: 0;
 	top: 0;
@@ -84,6 +84,7 @@ body {
 	z-index: 9999;
 	@media only screen and (max-width: 568px) {
 		padding: 7px 0;
+        min-height: 100px;
 	}
 }
 
@@ -97,7 +98,7 @@ body {
 		vertical-align: text-bottom;
 		img {
 			vertical-align: top;
-            max-height: 40px;
+            max-height: 55px;
 		}
         @media only screen and (max-width: 568px) {
             padding-top: 2px;
