--- a/stylesheet.less
+++ b/stylesheet.less
@@ -213,6 +213,7 @@ body {
             background-image: image('/images/icon-phone-grey.png');
             background-repeat: no-repeat;
             background-position: left center;
+            background-position: 0% 50%;
             padding-left: 20px;
 			@media @mobile {
 				cursor: pointer;
@@ -220,6 +221,7 @@ body {
                 background-image: image('/images/icon-phone-white.png');
                 background-repeat: no-repeat;
                 background-position: 10px center;
+                background-position: 7% 50%;
                 background-size: 20px;
                 padding-left: 35px;
 			}
