--- a/stylesheet.less
+++ b/stylesheet.less
@@ -208,23 +208,26 @@ body {
 			width: 100%;
 			float: left;
 		}
-		.widget.clicktocall a {
-			cursor: text;
-            background-image: image('/images/icon-phone-grey.png');
-            background-repeat: no-repeat;
-            background-position: left center;
-            background-position: 0% 50%;
-            padding-left: 20px;
-			@media @mobile {
-				cursor: pointer;
-                background-image: none;
-                background-image: image('/images/icon-phone-white.png');
+		.widget.clicktocall {
+            width: 100%;
+            a {
+    			cursor: text;
+                background-image: image('/images/icon-phone-grey.png');
                 background-repeat: no-repeat;
-                background-position: 10px center;
-                background-position: 7% 50%;
-                background-size: 20px;
-                padding-left: 35px;
-			}
+                background-position: left center;
+                background-position: 0% 50%;
+                padding-left: 20px;
+    			@media @mobile {
+    				cursor: pointer;
+                    background-image: none;
+                    background-image: image('/images/icon-phone-white.png');
+                    background-repeat: no-repeat;
+                    background-position: 10px center;
+                    background-position: 7% 50%;
+                    background-size: 20px;
+                    padding-left: 35px;
+    			}
+            }
 		}
 	}
 }
