attempt to fix background size in widget clicktocall for windows browser

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -213,6 +213,9 @@ body {
             a {
     			cursor: text;
                 background-image: image('/images/icon-phone-grey.png');
+                filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+                src='img/icon-phone-grey.png',
+                sizingMethod='scale');
                 background-repeat: no-repeat;
                 background-position: left center;
                 background-position: 0% 50%;
@@ -221,6 +224,9 @@ body {
     				cursor: pointer;
                     background-image: none;
                     background-image: image('/images/icon-phone-white.png');
+                    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+                    src='img/icon-phone-grey.png',
+                    sizingMethod='scale');
                     background-repeat: no-repeat;
                     background-position: 10px center;
                     background-position: 7% 50%;
