--- a/stylesheet.less
+++ b/stylesheet.less
@@ -213,9 +213,8 @@ body {
             a {
     			cursor: text;
                 background-image: image('/images/icon-phone-grey.png');
-                filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
-                src='img/icon-phone-grey.png',
-                sizingMethod='scale');
+                background-size: 20px;
+                overflow: hidden;
                 background-repeat: no-repeat;
                 background-position: left center;
                 background-position: 0% 50%;
@@ -223,14 +222,11 @@ body {
     			@media @mobile {
     				cursor: pointer;
                     background-image: none;
-                    background-image: image('/images/icon-phone-white.png');
-                    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
-                    src='img/icon-phone-grey.png',
-                    sizingMethod='scale');
                     background-repeat: no-repeat;
                     background-position: 10px center;
                     background-position: 7% 50%;
                     background-size: 20px;
+                    overflow: hidden;
                     padding-left: 35px;
     			}
             }
@@ -245,9 +241,11 @@ body {
     .header-profile .header-prof-right .widget.clicktocall a {
         background-image: image('/images/icon-phone-grey.svg');
         background-size: contain;
+        overflow: hidden;
         @media @mobile {
             background-image: image('/images/icon-phone-white.svg');
             background-size: 20px;
+            overflow: hidden;
         }
     }
 }
