--- a/stylesheet.less
+++ b/stylesheet.less
@@ -209,22 +209,18 @@ body {
 			float: left;
 		}
 		.widget.clicktocall {
-            width: 100%;
             a {
     			cursor: text;
                 background-image: image('/images/icon-phone-grey.png');
                 background-size: 20px;
                 overflow: hidden;
                 background-repeat: no-repeat;
-                background-position: left center;
-                background-position: 0% 50%;
+                background-position: 2px 0;
                 padding-left: 20px;
     			@media @mobile {
     				cursor: pointer;
-                    background-image: none;
+                    background-image: image('/images/icon-phone-white.png');
                     background-repeat: no-repeat;
-                    background-position: 10px center;
-                    background-position: 7% 50%;
                     background-size: 20px;
                     overflow: hidden;
                     padding-left: 35px;
@@ -241,11 +237,9 @@ body {
     .header-profile .header-prof-right .widget.clicktocall a {
         background-image: image('/images/icon-phone-grey.svg');
         background-size: contain;
-        overflow: hidden;
         @media @mobile {
             background-image: image('/images/icon-phone-white.svg');
             background-size: 20px;
-            overflow: hidden;
         }
     }
 }
