--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1111,26 +1111,19 @@ footer.blog-post-metadata time {
                     width: 100%;
                 }
                 select {
-                    text-indent: 0.01px;
-                    text-overflow: '';
-                    background-position: right 12px center;
-                    background-position-x: 93%;
-                    background-position-y: 55%;
                     cursor: pointer;
                     position: relative;
                     margin-bottom: 12px;
-                    padding: 8px 33px 8px 8px;
+                    padding: 8px;
                     border: 1px solid darken(@color-swatch2,7%);
                     color: @color-swatch5;
                     height: 35px;
+                    line-height: 34px;
                     @media @mobile {
                         width: 100%;
                         height: 45px;
                         border: 1px solid darken(@color-swatch2,8%);
                     }
-                }
-                select::-ms-expand {
-                    display: none;
                 }
                 select[name="displayCount"] {
                     margin-bottom: 0;
