--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1303,17 +1303,13 @@ footer.blog-post-metadata time {
     .ecom-product-variation {
         margin: 10px 0;
         select {
-            text-indent: 0.01px;
-            text-overflow: '';
-            background-position: right 12px center;
-            background-position-x: 93%;
-            background-position-y: 55%;
             cursor: pointer;
             position: relative;
-            padding: 8px 33px 8px 8px;
+            padding: 8px;
             border: 1px solid darken(@color-swatch1,7%);
             color: @color-swatch5;
             height: 35px;
+            line-height: 34px;
             @media @mobile {
                 width: 100%;
                 height: 45px;
@@ -1323,9 +1319,6 @@ footer.blog-post-metadata time {
             &:hover {
                 border: 1px solid @color-swatch3;
             }
-        }
-        select::-ms-expand {
-            display: none;
         }
     }
     @media @mobile {
@@ -1450,17 +1443,13 @@ span.ecom-product-category {
             }
         }
         select {
-            text-indent: 0.01px;
-            text-overflow: '';
-            background-position: right 12px center;
-            background-position-x: 93%;
-            background-position-y: 55%;
             cursor: pointer;
             position: relative;
-            padding: 8px 33px 8px 8px;
+            padding: 8px;
             border: 1px solid darken(@color-swatch2,7%);
             color: @color-swatch5;
             height: 35px;
+            line-height: 34px;
             @media @mobile {
                 width: 100%;
                 height: 45px;
@@ -1469,9 +1458,6 @@ span.ecom-product-category {
             &:hover {
                 border: 1px solid @color-swatch3;
             }
-        }
-        select::-ms-expand {
-            display: none;
         }
         .delivery-price {
             font-size: @font-swatch3-font-size;
