tweak profile pic in twitter on header

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -173,22 +173,20 @@ body {
 				}
 				.twitter-profile-pic {
 					margin-right: 3%;
-					width: 22%;
+                    margin-top: 2px;
+					width: 15%;
 					@media only screen and (max-width: 650px) {
 						width: auto;
 					}
 					a img {
-						width: 100%;
+						width: 48px;
 					}
 				}
 				.twitter-content {
 					a span:hover {
 						text-decoration: underline;
 					}
-					width: 73%;
-					@media only screen and (max-width: 650px) {
-						width: 70%;
-					}
+					width: 80%;
 					@media @mobile {
 						width: auto;
 					}
