reduce header padding in header and remove margin for social icons for mobile size

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -141,6 +141,9 @@ body {
 	padding-bottom: 40px;
 	width: 100%;
 	display: inline-block;
+    @media @mobile {
+        padding: 40px 0;
+    }
 	.header-prof-left {
 			display: inline-block;
 			vertical-align: top;
@@ -198,6 +201,9 @@ body {
 			.bk-profile-address p {
 				padding-bottom: 0;
 			}
+            .bk-profile-socialicons {
+                margin: 0;
+            }
 		}
 	}
 	.header-prof-right {
