add height to form input in header

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -205,6 +205,9 @@ body {
             .bk-profile-socialicons {
                 margin: 0;
             }
+            form fieldset input {
+                height: 45px;
+            }
 		}
 	}
 	.header-prof-right {
