--- a/stylesheet.less
+++ b/stylesheet.less
@@ -63,6 +63,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
     background: @color-swatch1;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
