attempt to fix nav for mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -57,6 +57,7 @@ body {
 #main {
 	padding-top: 100px;
     position: fixed;
+    left: 0;
     top: 0;
     right: 0;
     width: 100%;
@@ -79,6 +80,7 @@ body {
 	border-top: 15px solid @color-swatch7;
 	padding: 20px 0;
 	position: fixed;
+    left: 0;
 	right: 0;
 	top: 0;
 	width: 100%;
