Readded position absolute for mobile nav, got rid of fixed header at tablet.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -89,7 +89,7 @@ body {
 		padding: 7px 0;
         min-height: 100px;
 	}
-    @media @mobile {
+    @media @tablet {
         position: absolute;
     }
 }
@@ -279,6 +279,7 @@ body {
     	margin: 0;
     }
 	@media only screen and (max-height: 450px) {
+		position: absolute;
 		height: auto;
 	}
     @media @mobile {
