tweak text in feature

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -487,9 +487,7 @@ body.menu-active .bk-nav {
 			background-color: darken(@color-swatch3,23%);
 			width: auto;
 			padding: 8px 15px;
-            @media only screen and (max-width: 400px) {
-                display: block;
-            }
+            display: inline-block;
 		}
         h2 span {
             @media @mobile {
