--- a/stylesheet.less
+++ b/stylesheet.less
@@ -477,7 +477,20 @@ body.menu-active .bk-nav {
 		}
 		h2 {
 			margin-bottom: 12px;
+            font-family:@font-swatch8-font-family;
+            font-size:@font-swatch8-font-size;
+            font-weight: @font-swatch8-font-weight;
+            line-height:@font-swatch8-line-height;
+            color: @font-swatch8-color;
+            letter-spacing: @font-swatch8-letter-spacing;
 		}
+        h3 {
+            font-family:@font-swatch9-font-family;
+            font-size:@font-swatch9-font-size;
+            font-weight: @font-swatch9-font-weight;
+            line-height:@font-swatch9-line-height;
+            color: @font-swatch9-color;
+        }
         h2, h3 {
             @media @mobile {
                 margin-bottom: 3px;
