fix signup form

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -556,9 +556,14 @@ body.menu-active .bk-nav {
     margin-bottom: 10px;
     text-indent: 0;
     margin-right: 5px;
+    height: 42px;
     @media @tablet {
     	width: 100%;
     }
+}
+
+.signupform fieldset label {
+    margin-bottom: 0;
 }
 
 .contactform label {
@@ -605,6 +610,10 @@ body.menu-active .bk-nav {
 /* ===============================
  BUTTONS
 =============================== */
+
+.signupform fieldset button {
+    padding: 6px 18px 9px;
+}
 
 .widget.button button,
 button.btn, 
