--- a/stylesheet.less
+++ b/stylesheet.less
@@ -827,6 +827,7 @@ ul.twitter {
     .title {
         display: block;
         color: @color-swatch4;
+        padding: 20px 20px 0 20px;
     }
     .description {
         color: @color-swatch5;
