change blog image size

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1105,12 +1105,13 @@ ul.twitter {
 .blog-post-item {
     margin: 3em 0 2.5em;
     .blog-post-feature-image-wrap {
-        background: none;
+        background-image: none !important;
         margin-bottom: 2em;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat !important;
         img {
             display: block;
             max-width: 100%;
+            max-height: 600px;
         }
     }/* end blog-post-feature-image-wrap */
     p.blog-post-more-link {
