change background colour for search input box in products list widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1233,7 +1233,7 @@ footer.blog-post-metadata time {
                         -webkit-border-radius: 0;
                         height: 35px;
                         border: 1px solid darken(@color-swatch2,7%);
-                        background-color: darken(@color-swatch2,3%);
+                        background-color: transparent;
                         @media @mobile {
                             width: 100%;
                             margin-bottom: 20px;
