align left product images in products list and featured products widgets

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1256,6 +1256,7 @@ footer.blog-post-metadata time {
         .ecom-productslist-image-wrap {
             margin-bottom: 1em;
             background-color: @color-swatch1;
+            background-position: left center;
         }
         .ecom-productlist-info {
             .ecom-productslist-title {
@@ -1336,6 +1337,7 @@ footer.blog-post-metadata time {
     .ecom-featuredproducts-image-wrap {
         background-color: @color-swatch1;
         margin-bottom: 1em;
+        background-position: left center;
     }
     a:hover {
         text-decoration: none;
