--- a/stylesheet.less
+++ b/stylesheet.less
@@ -55,14 +55,14 @@ body {
 }
 
 #main {
+    display: block;
 	padding-top: 100px;
     position: fixed;
-    left: 0;
     top: 0;
     right: 0;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     background: @color-swatch1;
     -moz-box-sizing: border-box;
@@ -80,7 +80,6 @@ body {
 	border-top: 15px solid @color-swatch7;
 	padding: 20px 0;
 	position: fixed;
-    left: 0;
 	right: 0;
 	top: 0;
 	width: 100%;
@@ -279,7 +278,6 @@ body {
     	margin: 0;
     }
 	@media only screen and (max-height: 450px) {
-		position: absolute;
 		height: auto;
 	}
     @media @mobile {
