--- a/stylesheet.less
+++ b/stylesheet.less
@@ -441,7 +441,7 @@ body.menu-active .widget.extendednavigation#slide-menu {
 	right: 0px; 
 }
 
-body.menu-active #main, body.menu-active .bk-header { 
+body.menu-active #main { 
 	right: 320px; 
 	.transition( all, 0.5s, ease);
     -webkit-backface-visibility: hidden;
