--- a/default.twig
+++ b/default.twig
@@ -8,14 +8,13 @@
 
 <div role="main" id="main">
 	<header class="bk-header">
-		<div class="contain">
-			{{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png'),"showTplWidget":"0"})|raw}}
-			{{widget('companyname', 'companyname', {"business": "profile"})|raw}}
-
-		</div><!--end contain-->
 	</header>
 	<div class="header-profile">
 		<div class="contain">
+			<div class="company-logo">
+				{{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png'),"showTplWidget":"0"})|raw}}
+				{{widget('companyname', 'companyname', {"business": "profile"})|raw}}
+			</div>
 			<div class="header-prof-left">
 				{{widget('profile', 'header-tweet', { 'profileType':'twitter', 'twitter':'profile', 'refreshtime':'1800000'})|raw}}
 				{{widget('profile', 'header-adress', { 'profileType':'address', 'address':'profile', 'refreshtime':'1800000'})|raw}}
