--- a/stylesheet.less
+++ b/stylesheet.less
@@ -237,7 +237,6 @@ body {
 	}
 }
 
-
 /* SVG Icons */
 
 .svg {
@@ -250,7 +249,6 @@ body {
         }
     }
 }
-
 
 /* ===============================
    EXTENDED NAVIGATION
@@ -319,6 +317,9 @@ body {
             }
             &:hover { 
             	.transition( all, 0.5s, ease);
+                .text {
+                    color: @font-swatch6-color-hover;
+                }
             	ul {
             		background: transparent;
             		position: relative;
@@ -361,7 +362,7 @@ body {
                     }
                 }
             	ul li a .text {
-            		color: lighten(@color-swatch5, 32%);
+            		color: @font-swatch6-color;
                     @media only screen and (max-width: 450px) {
                         font-size: bkscale(@font-swatch6-font-size, 0.9);
                         line-height: bkscale(@font-swatch6-line-height,0.9);
@@ -450,6 +451,19 @@ body #main, body .bk-header {
 body.menu-active .bk-nav { 
 	position: absolute;
 	right: 0; 
+}
+
+
+// Selected state
+
+.extendednavigation ul li.selected, .extendednavigation ul li:hover ul li.selected, .extendednavigation ul li.folder.selected ul li.selected, .extendednavigation ul li.folder.selected {
+    a, .text {
+        text-decoration: underline;
+    }
+}
+
+.extendednavigation ul li.folder.selected ul li .text {
+    color: @font-swatch6-color;
 }
 
 /* ===============================
@@ -597,9 +611,9 @@ body.menu-active .bk-nav {
     }
 }
 
-/* ===============================
- BUTTONS
-=============================== */
+/*  ===============================
+    BUTTONS
+    =============================== */
 
 .signupform fieldset button {
     padding: 6px 18px 9px;
@@ -617,7 +631,9 @@ button.btn,
 .tweet a,
 .widget.paypalbuynow .widget.button.paypal,
 .blog-post-more-link a,
-.blog-list-footer a {
+.blog-list-footer a,
+a.basket-summary-empty-cta.btn, 
+.btn.basket-summary-submit {
     font-family: @font-swatch7-font-family;
     color: @font-swatch7-color;
     font-size: @font-swatch7-font-size;
@@ -637,6 +653,10 @@ button.btn,
         background-color: @font-swatch7-background-color-hover;
     }
 } 
+
+a.basket-summary-empty-cta.btn {
+    padding: 13px 18px !important;
+}
 
 .widget.profile form button.btn {
 	padding: 7px 15px 10px;
@@ -895,17 +915,67 @@ ul.twitter {
 }
 
 /* ===============================
-   IMAGE GALLERY
+   GALLERY WIDGET
    =============================== */
 
 .widget.gallery {
-    margin-bottom: 20px;
+    margin: 20px 0 20px -0.5%;
     ul li {
+        @media @tablet {
+            width: 50%;
+            padding-bottom: 50%;
+        }
         @media @mobile {
             width: 100%;
             padding-bottom: 100%;
         }
+        span.inner {
+            .title,
+            .description {
+                // Font
+                color: @font-swatch5-color;
+                font-family: @font-swatch5-font-family;
+                letter-spacing: @font-swatch5-letter-spacing;
+                text-align: left;
+            }
+            .title {
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 30px;
+            }
+            .description {
+                font-size: 13px;
+                line-height: 25px;
+            }
+        }
     }
+    // Image Data
+    .image-data {
+        display: block;
+        opacity: 0;
+        background-color: @color-swatch2;
+        -webkit-transition: all 0.4s ease-out;
+        -moz-transition: all 0.4s ease-out;
+        -o-transition: all 0.4s ease-out;
+        transition: all 0.4s ease-out;
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
+/* Lightbox */
+
+.lb-data .lb-caption, .lb-data .lb-number {
+  font-family:@font-swatch5-font-family;
+  font-size:@font-swatch5-font-size;
+  font-weight: @font-swatch5-font-weight;
+  line-height:@font-swatch5-line-height;
+  color:lighten(@font-swatch5-color,50%);
+}
+
+.lb-data .lb-number {
+  font-size:bkscale(@font-swatch5-font-size,0.9);
 }
 
 /* ===============================
@@ -1441,150 +1511,153 @@ span.ecom-product-category {
 }
 
 /* ===============================
-  ECOM - CHECKOUT
+  ECOM - BASKET SUMMARY
    =============================== */
 
-.widget.ecomcheckout {
+.widget.ecombasketsummary {
     h2 {
-        text-align: center;
         padding: 1em 0;
-        @media @tablet {
-            padding: 1em;
+        @media @mobile {
+            padding: 0.5em 0;
         }
     }
-    .checkout-empty {
-        text-align: center;
-        p {
-            padding: 2em 0;
-        }
+    .basket-summary-empty-copy {
+        padding: 0 0 3em;
     }
-    table {
+    .basket-summary-items-table {
+        border-spacing: 0;
+        width: 100%;
         tr {
-            td {
-                .checkout-quantitybtn {
-                    background-color: transparent;
-                    border: 1px solid darken(@color-swatch1,7%);
-                    -webkit-border-radius: 5px;
-                    -moz-border-radius: 5px;
-                    border-radius: 5px;
-                    @media only screen and (max-width: 415px) {
-                        text-align: center;
+            width: 100%;
+            th, td {
+                border-bottom: 1px solid fade(@color-swatch5,10%);
+                padding: 1.5em 0;
+                text-align: left;
+                &:nth-child(1) {
+                    width: 10%;
+                    padding-left: 5px;
+                    @media @tablet {
+                        width: 15%;
                     }
-                    button {
-                        background-color: darken(@color-swatch1,3%);
-                        margin: 0;
-                        font-size: 1em;
-                        line-height: normal;
+                }
+                &:nth-child(2) {
+                    width: 68%;
+                }
+                &:nth-child(3) {
+                    text-align: right;
+                    padding: 1.5em 0.5em;
+                }
+            }
+            th {
+                padding: 1.5em 0.5em;
+                vertical-align: bottom;
+            }
+            @media only screen and (max-width: 500px) {
+                display: table;
+                th:nth-child(3) {
+                    display: none;
+                }
+                td {
+                    padding: 1em 0 0;
+                    float: left;
+                    width: 100%;
+                    border-bottom: none;
+                    &:nth-child(1), &:nth-child(2), &:nth-child(3) {
+                        width: 100%;
+                    }
+                    &:nth-child(3) {
+                        text-align: left;
+                        padding: 0 0 1em;
                         color: @color-swatch4;
+                        border-bottom: 1px solid fade(@color-swatch5,10%);
+                    }
+                    &.basket-summary-amount {
+                        padding: 1em 0;
+                    }
+                }
+            }
+            &.basket-summary-items {
+                td {
+                    vertical-align: top;
+                    .image-wrap {
+                        width: 95px;
+                        height: 95px;
+                        background-position: center center;
+                        background-repeat: no-repeat;
+                        -webkit-background-size: cover;
+                        -moz-background-size: cover;
+                        -o-background-size: cover;
+                        background-size: cover;
+                        overflow: hidden;
+                        float: left;
+                        margin-right: 20px;
+                        img {
+                            display: none;
+                        }
+                    }
+                    .basket-summary-productname, .basket-summary-pricepu {
+                        display: block;
+                    }
+                    .basket-summary-productname {
+                        text-decoration: underline;
                         &:hover {
-                            background-color: darken(@color-swatch1,10%);
-                        }
-                        @media @tablet {
-                            width: 44px;
-                            height: 44px;
-                        }
-                        @media only screen and (max-width: 415px) {
-                            width: 100%;
+                            text-decoration: none;
                         }
                     }
-                    span {
-                        width: auto;
-                        padding: 0 10px;
-                        @media only screen and (max-width: 415px) {
-                            padding: 15px;
+                    .basket-summary-quantity {
+                        padding-right: 5px;
+                        padding-bottom: 5px;
+                        display: block;
+                    }
+                    .basket-summary-quantitybtn {
+                        background-color: transparent;
+                        button {
+                            background-color: darken(@color-swatch1,3%);
+                            margin: 0;
+                            font-size: 1em;
+                            line-height: normal;
+                            color: @color-swatch5;
+                            border: 1px solid darken(@color-swatch1,10%);
+                            -webkit-border-radius: 4px;
+                            -moz-border-radius: 4px;
+                            border-radius: 4px;
+                            &:hover {
+                                background-color: darken(@color-swatch1,13%);
+                            }
+                            @media @tablet {
+                                width: 44px;
+                                height: 44px;
+                            }
                         }
+                        span {
+                            width: auto;
+                            padding: 0 10px;
+                        }
+                    }
+                    &.basket-summary-amount {
+                        vertical-align: bottom;
                     }
                 }
-                &.checkout-subtotal {
+            }
+            &:last-child {
+                td {
+                    border: none;
+                    color: @font-swatch3-color;
                     font-size: @font-swatch3-font-size;
-                    font-weight: @font-swatch3-font-weight;
                     line-height: @font-swatch3-line-height;
-                    color: @font-swatch5-color;
                 }
             }
         }
     }
-    .delivery {
-        padding: 2em 0 0;
-        width: 50%;
-        @media @tablet {
-            width: 100%;
-        }
-        .delivery-title {
-            padding: 0 0 20px 0;
-            font-size: @font-swatch2-font-size;
-            font-weight: @font-swatch2-font-weight;
-            line-height: @font-swatch2-line-height;
-        }
-        .form-group {
-            width: 100%;
-            @media only screen and (max-width: 1200px) { 
-                width: 100%;
-            }
-            label {
-                width:100%;
-                float: left;
-            }
-            input {
-                border: 1px solid darken(@color-swatch1,7%);
-                background-color: darken(@color-swatch1,3%);
-                margin-bottom: 1em;
-                .border-radius(3px);
-            }
-        }
-        select {
-            cursor: pointer;
-            position: relative;
-            padding: 8px;
-            border: 1px solid darken(@color-swatch2,7%);
-            color: @color-swatch5;
-            height: 35px;
-            line-height: 34px;
-            @media @mobile {
-                width: 100%;
-                height: 45px;
-                border: 1px solid darken(@color-swatch2,8%);
-            }
-            &:hover {
-                border: 1px solid @color-swatch3;
-            }
-        }
-        .delivery-price {
-            font-size: @font-swatch3-font-size;
-            font-weight: @font-swatch3-font-weight;
-            line-height: @font-swatch3-line-height;
-            color: @font-swatch5-color;
-            padding: 20px 5px;
-        }
-    }
-    .checkout-total-tax {
-        font-size: @font-swatch3-font-size;
-        font-weight: @font-swatch3-font-weight;
-        line-height: @font-swatch3-line-height;
-        color: @font-swatch5-color;
-        margin-top: 2em;
-        padding: 20px 5px 0;
-    }
-    .checkout-total-amount {
-        font-size: @font-swatch3-font-size;
-        font-weight: @font-swatch3-font-weight;
-        line-height: @font-swatch3-line-height;
-        color: @color-swatch3;
-        margin-bottom: 1em;
-        padding: 20px 5px;
-        border-bottom: 1px solid darken(@color-swatch1,7%);
-    }
-    .checkout-payment-method {
-        padding: 20px 5px;
-        border-bottom: 1px solid darken(@color-swatch1,7%);
-        input {
-            -webkit-appearance: radio;
-            width: auto;
-        }
-    }
-    .checkout-legal-links {
+    .basket-summary-legal-links {
         list-style: none;
-        padding: 20px 0 0;
+        padding: 1em 0;
+        a {
+            text-decoration: underline;
+            &:hover {
+                text-decoration: none;
+            }
+        }
     }
 }
 
