tweak products filter

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1272,8 +1272,10 @@ footer.blog-post-metadata time {
         border: 1px solid darken(@color-swatch2,7%);
         color: @color-swatch5;
         background-color: @color-swatch1;
+        font-family: @font-swatch5-font-family;
+        font-size: 12px;
+        line-height: inherit;
         height: 35px;
-        line-height: 34px;
         @media @tablet {
           min-width: 50%;
         }
@@ -1291,7 +1293,8 @@ footer.blog-post-metadata time {
           border: 1px solid darken(@color-swatch2,7%);
           background-color: @color-swatch1;
           font-family: @font-swatch5-font-family;
-          font-size: @font-swatch5-font-size;
+          font-size: 13px;
+          line-height: inherit;
           color: @color-swatch5;
           @media @tablet {
             min-width: 50%;
@@ -1307,7 +1310,6 @@ footer.blog-post-metadata time {
             height: 35px;
             padding: 1px 20px;
             position: relative;
-            top:1px;
             margin: 0;
             border: none;
             font-family: @font-swatch7-font-family;
