--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1616,19 +1616,12 @@ span.ecom-product-category {
                     .basket-summary-productname, .basket-summary-pricepu {
                         display: block;
                     }
-                    .basket-summary-productname {
-                        text-decoration: underline;
-                        &:hover {
-                            text-decoration: none;
-                        }
-                    }
-                    .basket-summary-quantity {
-                        padding-right: 5px;
-                        padding-bottom: 5px;
-                        display: block;
-                    }
                     .basket-summary-quantitybtn {
                         background-color: transparent;
+                        label {
+                            display: block;
+                            margin-bottom: 5px;
+                        }
                         button {
                             background-color: darken(@color-swatch1,3%);
                             margin: 0;
@@ -1670,12 +1663,6 @@ span.ecom-product-category {
     .basket-summary-legal-links {
         list-style: none;
         padding: 1em 0;
-        a {
-            text-decoration: underline;
-            &:hover {
-                text-decoration: none;
-            }
-        }
     }
 }
 
