attempt to fix nav for android phone

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -274,9 +274,9 @@
 .widget.extendednavigation {
     z-index: 9999;
 	background: @color-swatch7;
-	display: table;
 	padding: 30px 15px;
 	width: 100%;
+    float: left;
     @media only screen and (max-width: 450px) {
         padding: 17px 15px;
     }
