change style for selected state in nav

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -454,7 +454,7 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
 
 .extendednavigation ul li.selected, .extendednavigation ul li:hover ul li.selected, .extendednavigation ul li.folder.selected ul li.selected, .extendednavigation ul li.folder.selected {
     a, .text {
-        text-decoration: underline;
+        color: @font-swatch6-color-hover;
     }
 }
 
